add frontend service
